Update app views

--- a/addons/music_manager/views/music_manager_genre_views.xml
+++ b/addons/music_manager/views/music_manager_genre_views.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
-
+        <record id="music_manager_genre_view_action" model="ir.actions.act_window">
+            <field name="name">Genre</field>
+            <field name="res_model">music_manager.genre</field>
+            <field name="view_mode">tree,form</field>
+        </record>
     </data>
 </odoo>
