--- a/addons/music_manager/views/music_manager_album_views.xml
+++ b/addons/music_manager/views/music_manager_album_views.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
-
+        <record id="music_manager_album_view_action" model="ir.actions.act_window">
+            <field name="name">Album</field>
+            <field name="res_model">music_manager.album</field>
+            <field name="view_mode">kanban,form</field>
+        </record>
     </data>
 </odoo>
