--- a/addons/music_manager/views/music_manager_menus.xml
+++ b/addons/music_manager/views/music_manager_menus.xml
@@ -4,11 +4,11 @@
     <menuitem id="music_manager_menu_root" name="Music Manager"/>
 
     <!-- Submenus -->
-    <menuitem id="music_manager_music_menu" name="Music" parent="music_manager_menu_root"/>
+    <menuitem id="music_manager_music_menu" name="My music" parent="music_manager_menu_root"/>
 
     <!-- Actions -->
-    <menuitem id="music_manager_music_menu_song_action" name="Manage songs" parent="music_manager_music_menu" action="music_manager_track_view_action"/>
-    <menuitem id="music_manager_music_menu_artist_action" name="Manage artists" parent="music_manager_music_menu" action="music_manager_artist_view_action"/>
-    <menuitem id="music_manager_music_menu_album_action" name="Manage albums" parent="music_manager_music_menu" action="music_manager_album_view_action"/>
-    <menuitem id="music_manager_music_menu_genre_action" name="Manage genres" parent="music_manager_music_menu" action="music_manager_genre_view_action"/>
+    <menuitem id="music_manager_music_menu_song_action" name="Songs" parent="music_manager_music_menu" action="music_manager_track_view_action"/>
+    <menuitem id="music_manager_music_menu_artist_action" name="Artists" parent="music_manager_music_menu" action="music_manager_artist_view_action"/>
+    <menuitem id="music_manager_music_menu_album_action" name="Albums" parent="music_manager_music_menu" action="music_manager_album_view_action"/>
+    <menuitem id="music_manager_music_menu_genre_action" name="Genres" parent="music_manager_music_menu" action="music_manager_genre_view_action"/>
 </odoo>
