[UPDATE] track model: CRUD operations to find artists, albums & genres.

--- a/addons/music_manager/views/music_manager_track_views.xml
+++ b/addons/music_manager/views/music_manager_track_views.xml
@@ -13,9 +13,9 @@
             <field name="model">music_manager.track</field>
             <field name="arch" type="xml">
                 <tree string="Songs">
-                    <field name="cover" string="Cover" widget="image" options="{'preview_image': 'cover', 'size': [24]}" optional="hide"/>
+                    <field name="cover" string="Cover" widget="image" options="{'preview_image': 'cover', 'size': [28]}" optional="hide"/>
                     <field name="name" string="Title"/>
-                    <field name="original_artist" string="Artist"/>
+                    <field name="original_artist" string="Original artist"/>
                     <field name="album_id" string="Album"/>
                     <field name="year" string="Year"/>
                     <field name="genre_id" string="Genre"/>
